--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asttokens==3.0.0
 attrs==25.1.0
 blinker==1.9.0
+branca==0.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -12,6 +13,7 @@ dash==2.18.2
 dash-bootstrap-components==1.7.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
+dash-leaflet==1.0.15
 dash-table==5.0.0
 debugpy==1.8.12
 decorator==5.2.1
@@ -19,8 +21,10 @@ et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 Flask==3.0.3
+folium==0.19.5
 fonttools==4.56.0
 fsspec==2025.2.0
+geopandas==1.0.1
 idna==3.10
 importlib_metadata==8.6.1
 ipykernel==6.29.5
@@ -52,23 +56,28 @@ psutil==7.0.0
 pure_eval==0.2.3
 pyarrow==19.0.1
 Pygments==2.19.1
+pyogrio==0.10.0
 pyparsing==3.2.1
+pyproj==3.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
-pywin32==308
 pyzmq==26.2.1
 referencing==0.36.2
 requests==2.32.3
 retrying==1.3.4
 rpds-py==0.23.1
 setuptools==75.8.2
+shapely==2.0.7
 six==1.17.0
 stack-data==0.6.3
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
+Unidecode==1.3.8
 urllib3==2.3.0
 wcwidth==0.2.13
 Werkzeug==3.0.6
+XlsxWriter==3.2.2
+xyzservices==2025.1.0
 zipp==3.21.0
